# MachXplorer

./: CMakeLists.txt  README  configure.sh
include/: analyzer.h
src/: analyzer.cpp  main.cpp  testObfuscation.c
